Revision history for {{$dist->name}}

{{$NEXT}}

0.14      2013-02-22 18:53:00Z
          - New strict types, which verify that the data actually can be
            inflated into a valid DateTime object

0.13      2012-12-22 01:00:17Z
          - support more than two digits of hours in durations.  (Partial
            support of page 27, paragraph two of ISO 8601:2004(E) ).
          - documentation added for coercions from datetime string types to
            DateTime.
          - spelling patch applied from debian (RT#81262, thanks Jonas
            Genannt!)

0.12      2012-08-07 21:08:37Z
          - converted uses of Test::Exception to Test::Fatal
          - trailing 'Z' to indicate timezone is now optional, matching the
            official ISO8601 specification (RT#78753)
          - converted dist to Dist::Zilla

0.11      2012-05-11T16:15:04Z
          - Generate date time strings with a full timezone, not just "Z".
          - Additional coercions added. [Aaron Moses].

0.10      2012-01-06T12:14:50Z
          - Fix and test casting of epoch times.

0.09      2012-01-04T19:16:21Z
          - Coerce to DateTime objects.
          - DateTimes must be in UTC now enforced.

0.08      2011-12-16 16:23:31Z
          - Durations can omit components, as per standard.
          - Date durations do not contain a "T" character.
          - Output fractional seconds.

0.07      2010-09-07 16:28:00 BST+0100
          - Really fix so that it works in all cases.

0.06      2010-09-06 15:44:00 BST+0100
          - Fix so that it works without MooseX::Types::DateTime::MySQL
            installed.

0.05      2010-09-06 15:16:00 BST+0100
          - Add support for coercing to and from
            MooseX::Types::DateTime::MySQL

0.04      2010-08-15 18:23:00 BST+0100
          - Fix tests on perls compiled with uselongdoubles (RT#60356)

0.03      2010-08-13 11:15:00 BST+0100
          - See also to the ISO8601 wiki page.