@@ -3,23 +3,12 @@ author      = Tomas Doran (t0m) <bobtfish@bobtfish.net>
 abstract    = ISO8601 date and duration string type constraints and coercions for Moose
 copyright_holder = Tomas Doran
 license     = Perl_5
+copyright_year = 2009
 
-[Git::GatherDir]
-
-[@Filter]
--bundle = @Basic
--remove = GatherDir
--remove = ExtraTests
-
-; use V= to override; otherwise version is incremented from last tag
-[Git::NextVersion]
-version_regexp = ^v([\d._]+)(-TRIAL)?$
-
-[GithubMeta]
-homepage = http://metacpan.org/module/MooseX::Types::ISO8601
-
-[AutoPrereqs]
-skip = ^DT$
+[@Author::ETHER]
+AutoPrereqs.skip[] = ^DT$
+Test::ReportPrereqs.include = Dist::CheckConflicts
+-remove = Test::PodSpelling
 
 [Prereqs / RuntimeRequires]
 DateTime::Format::ISO8601 = 0
@@ -27,74 +16,11 @@ DateTime::Format::ISO8601 = 0
 [Prereqs / RuntimeRecommends]
 MooseX::Types::DateTime::MySQL = 0
 
-[InstallGuide]
-[MetaConfig]
-[MetaProvides::Package]
-[MetaJSON]
-[Git::Describe]
-[PkgVersion]
-[MinimumPerl]
+[Prereqs / DevelopRequires]
+Test::CleanNamespaces = 0.08
 
-[ReadmeAnyFromPod]
-type = markdown
-filename = README.md
-location = root
-
-[NoTabsTests]
-[EOLTests]
-[PodSyntaxTests]
-[PodCoverageTests]
-[Test::Pod::LinkCheck]
-[Test::Pod::No404s]
-
-[Test::Compile]
-bail_out_on_fail = 1
-
-[Test::MinimumVersion]
-[MetaTests]
-[Test::CPAN::Changes]
-[Test::Version]
-;[Test::UnusedVars]  ; broken in 5.16.0!
-[Test::ChangesHasContent]
-
-[Test::CheckDeps]
-:version = 0.005
-fatal = 1
-
-[RunExtraTests]
-
-[CheckPrereqsIndexed]
-
-[Git::Remote::Check]
-remote_branch = master
-
-[Git::CheckFor::CorrectBranch]
-:version = 0.004
-release_branch = master
-release_branch = stable
-
-[Git::Check]
-allow_dirty = README.md
-
-[NextRelease]
-:version = 4.300018
-format = %-8V  %{yyyy-MM-dd HH:mm:ss ZZZZ}d (%U)
-
-[Git::Commit]
-allow_dirty = Changes
-allow_dirty = README.md
-commit_msg = %N-%v%t%n%n%c
-
-[Git::Tag]
-tag_format = v%v%t
-tag_message = v%v%t
-
-[Git::Push]
-
-[InstallRelease]
-install_command = cpanm .
-
-[Clean]
+; authordep Pod::Weaver::Section::Contributors
+[ContributorsFromGit]
 
 [Test::CheckBreaks]
 conflicts_module = Moose::Conflicts
